syntax = "proto3";

option csharp_namespace = "gRPC.Code";

package time_logging.code;

service CodeService {
  rpc get (CodeRequest) returns (CodeList) {}
}

message CodeRequest {
  string id = 1;
}

message CodeList {
  repeated Code codes = 1;
}

message Code {
  string id = 1;
  string productId = 2;
  string name = 3;
  string description = 4;
}