syntax = "proto3";

option csharp_namespace = "gRPC.Product";

package time_logging.product;

service ProductService {
  rpc get (ProductRequest) returns (ProductList) {}
}

message ProductRequest {
  string id = 1;
}

message ProductList {
  repeated Product products = 1;
}

message Product {
  string id = 1;
  string name = 2;
}